<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieViewModel"
            type="com.moviedb.MovieDetail" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/store_bg">

        <RelativeLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/purple_500"
            android:layout_alignParentTop="true"
            android:padding="5dip">

            <ImageView
                android:id = "@+id/back_button"
                android:layout_width = "50dp"
                android:layout_height = "match_parent"
                android:layout_marginEnd= "10dp"
                android:focusable = "true"
                android:padding = "5dp"
                android:src = "@drawable/ic_backspace"
                android:visibility = "visible"
                />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:singleLine="true"
                android:layout_marginStart="85dp"
                android:ellipsize="marquee"
                android:padding="5dp"
                android:text="@{movieViewModel.title}"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <View
            android:id="@+id/title_seperator"
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_below="@+id/title_bar"
            android:background="#70FFFFFF"
            android:visibility="invisible" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_below="@+id/title_seperator"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/place_holder"
                    android:scaleType="fitCenter" />

                <View
                    android:id="@+id/poster_seperator"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dip"
                    android:layout_below="@+id/movie_poster"
                    android:layout_marginTop="10dp"
                    android:background="#70FFFFFF" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_below="@+id/poster_seperator"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/release_date_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        android:text="@string/releasedHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="2dp"
                        android:text="@{movieViewModel.released}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/runtime_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="15dp"
                        android:text="@string/runtimeHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="2dp"
                        android:text="@{movieViewModel.runtime}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/genre_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="15dp"
                        android:text="@string/genreHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="5dp"
                        android:text="@{movieViewModel.genre}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/director_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="15dp"
                        android:text="@string/directorHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="2dp"
                        android:text="@{movieViewModel.director}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/actors_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="15dp"
                        android:text="@string/castHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="2dp"
                        android:text="@{movieViewModel.actors}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/plot_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="15dp"
                        android:text="@string/plotHeaderText"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/movie_plot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="false"
                        android:layout_marginTop="2dp"
                        android:text="@{movieViewModel.plot}"
                        android:textColor="#7AFFFFFF"
                        android:textSize="15sp" />
                </LinearLayout>

                <!--<ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/poster_seperator"
                    android:layout_marginBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp">


                </ScrollView>-->

            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>
</layout>